hw1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw1-deployment
  namespace: otus-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: health-app
  template:
    metadata:
      labels:
        app: health-app
    spec:
      containers:
        - name: app
          image: eduardromanyuk/otus-hw1:latest
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 3
