hw1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw1-service
  namespace: otus-lab
spec:
  selector:
    app: health-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
