hw1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw1-ingress
  namespace: otus-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/eduard-romaniuk($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: hw1-service
                port:
                  number: 80
